Add battery voltages in web interface

--- a/brewery/web/nginx.conf
+++ b/brewery/web/nginx.conf
@@ -39,5 +39,7 @@ http {
         location /brewery/ {
             proxy_pass      http://localhost:8080/;
         }
+
+        location /sysinfo.json { alias /tmp/sysinfo.json; }
     }
 }
