--- a/brewery/web/nginx.conf.template
+++ b/brewery/web/nginx.conf.template
@@ -12,21 +12,19 @@ http {
     default_type application/octet-stream;
     error_log  /tmp/nginx-error.log;
 
-    log_format   main '$remote_addr - $remote_user [$time_local]  $status '
-    '"$request" $body_bytes_sent "$http_referer" '
-    '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format   main '$$remote_addr - $$remote_user [$$time_local]  $$status '
+    '"$$request" $$body_bytes_sent "$$http_referer" '
+    '"$$http_user_agent" "$$http_x_forwarded_for"';
     sendfile     on;
     tcp_nopush   on;
 
     server {
-        listen 80;
-        #listen 9000;
+        listen ${listen_port};
         access_log  off;
 
         # serve static files
         location /  {
-            root        /root/bhware/brewery/web;
-            #root        /home/thier/Informatique/binhouseteam/bhware-bhbot/brewery/web;
+            root        ${document_root};
             autoindex   on;
         }
 
@@ -42,4 +40,8 @@ http {
 
         location /sysinfo.json { alias /tmp/sysinfo.json; }
     }
+
+
 }
+
+
