--- a/brewery/web/nginx-config-turok.local.json
+++ b/brewery/web/nginx-config-turok.local.json
@@ -1,5 +1,6 @@
 {
   "listen_port": 9000,
-  "document_root": "/Users/yannick/Documents/Robotique/2015/bhware-bhbot/brewery/web"
+  "document_root": "/Users/yannick/Documents/Robotique/2015/bhware-bhbot/brewery/web",
+  "pic_url": "http://localhost:42080/"
 }
 
