--- a/brewery/web/nginx/nginx.conf.template
+++ b/brewery/web/nginx/nginx.conf.template
@@ -1,16 +1,15 @@
-error_log  /tmp/nginx-error.log;
-pid        /tmp/nginx.pid;
-working_directory /tmp;
+error_log  /tmp/nginx/error.log;
+pid        /tmp/nginx/pid;
+working_directory /tmp/nginx;
 
 events {
   worker_connections  1024;
 }
 
 http {
-    include    mime.types;
+    include    ${document_root}/nginx/mime.types;
     index    index.html index.htm
     default_type application/octet-stream;
-    error_log  /tmp/nginx-error.log;
 
     log_format   main '$$remote_addr - $$remote_user [$$time_local]  $$status '
     '"$$request" $$body_bytes_sent "$$http_referer" '
